<resources>

    <!-- App Strings -->
    <string name="app_name">Dare-U</string>
    <string name="app_language">english</string>
    <string name="app_device">android</string>
    <string name="app_loading">Loading</string>
    <string name="app_designed">Designed in Barcelona</string>
    <string name="app_senderId">532816633604</string>

    <!-- Help -->
    <string name="help_title">Help</string>
    <string name="help_home">This screen will show you the public challenges that your contacts have shared</string>
    <string name="help_challenges">This screen will show your pending and completed challenges. You can create new challenges by clicking on the button placed on the top bar.\nTIP: You can delete an unanswered challenge by maintaining the challenge pressed</string>
    <string name="help_contacts">This screen will show you your contacts and those selected as favorites. You can add new contacts by selecting the button placed on the top bar. Search for friends by their username and click on the add button.\nTIP: You can delete any contact by maintaining the contact pressed</string>
    <string name="help_profile"></string>
    <string name="help_no_contacts">You do not have any contacts yet. You can add new contacts by selecting the button placed on the top bar, or you can send your friends an invitation to join Dare-U with the button below.</string>
    <string name="help_no_posts">Hello, there is no active activities going on here.</string>
    <string name="help_no_challenges">Hello, there is no active activities going on here. You can send a challenge to one of your friends by going to your contacts or clicking the add button in the upper right.</string>
    <string name="help_invite">You can send your friends an invitation to join Dare-U by clicking the button in the upper right.</string>
    <string name="help_invite_friends">Hello, I found this wonderful platform that I thought you might like, it is called Dare-U, here you are able to send challenges and receive them. You can download the app from http://www.dare-u.com. You can add me to your contacts, my username is</string>

    <!-- App Errors -->
    <string name="error_ok">Ok</string>
    <string name="error_GEN">An error has occurred during this process</string>
    <string name="error_CON">The connection to the server does not work properly. Please, check your Internet connection or try again later</string>
    <string name="error_FORM">The characters that you input are not allowed</string>
    <string name="error_LOGIN">Username or/and password are not valid</string>
    <string name="error_SIGNUP">The username that you have chosen is not available</string>
    <string name="error_FILE">An error has occurred processing the file</string>
    <string name="error_CONTACT">You have already added this contact</string>
    <string name="error_CHALLENGE">You already have a challenge pending with this contact</string>

    <!-- App Options -->
    <string name="YES">YES</string>
    <string name="NO">NO</string>

    <!-- App Notifications -->
    <string name="notification_CONTACT">has added you</string>
    <string name="notification_CHALLENGE">has sent you a challenge</string>
    <string name="notification_ANSWER">has answered your challenge</string>

    <!-- ActionBar -->
    <string name="action_settings">Settings</string>
    <string name="action_new_challenge">New challenge</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_accept">Accept</string>
    <string name="action_send">Send</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_publish">Post</string>

    <!-- List View -->
    <string name="listview_favorite">Favorites</string>

    <!-- Main -->

    <!-- Welcome -->
    <string name="title_activity_welcome">Welcome</string>
    <string name="welcome_log_in">Log In</string>
    <string name="welcome_sign_up">Sign Up</string>

    <!-- Log In -->
    <string name="title_activity_log_in">Log In</string>
    <string name="log_in_button">Log In</string>
    <string name="log_in_username">Username</string>
    <string name="log_in_password">Password</string>

    <!-- Sign Up -->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_birth_year">Birth Year</string>
    <string name="sign_up_terms_privacy">Do you accept our <a href="http://www.dare-u.com/terms.html">Terms of Use</a> and <a href="http://www.dare-u.com/privacy.html">Privacy Policy</a>?</string>

    <!-- Home -->

    <!-- Challenges -->
    <string name="title_fragment_challenge">Challenges</string>
    <string name="challenges_waiting">Unanswered</string>
    <string name="challenges_option_delete">Do you want to delete this challenge?</string>
    <!-- New Challenge -->
    <string name="title_activity_new_challenge">New Challenge</string>
    <string name="new_challenge_to">To</string>
    <string name="new_challenge_challenge">Challenge</string>
    <string name="new_challenge_send">Send</string>

    <!-- Contacts -->
    <string name="title_fragment_contacts">Contacts</string>
    <string name="contacts_option_delete">Do you want to delete this contact?</string>
    <string name="contacts_invite">Invite</string>
    <!-- New Contact -->
    <string name="title_activity_new_contact">Add Contact</string>
    <string name="new_contact_result">Results</string>

    <!-- Profile -->
    <string name="title_fragment_profile">Profile</string>
    <string name="profile_username">Username</string>
    <string name="profile_log_out">Log Out</string>
    <string name="profile_option_delete">Do you want to delete this post from your public profile?</string>

    <!-- Camera -->
    <string name="title_activity_camera">Camera</string>
    <string name="camera_no_data">Please, take a photo or record a video to answer the challenge!</string>
    <string name="camera_option_post">Do you want to post this challenge on your public profile?</string>

    <!-- Contact Challenge -->
    <string name="title_activity_contact_challenge">Challenge</string>

    <!-- Post Challenge -->
    <string name="title_activity_post_challenge">Post</string>

    <!-- Video Recorder -->
    <string name="title_activity_video_recorder">Video</string>

    <!-- Photo Taker -->
    <string name="title_activity_photo_taker">Photo</string>

</resources>
