<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dare_u.dare_u.WelcomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/welcome_padding"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/welcomeBox">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_big"
            android:text="@string/app_name"
            android:textColor="@color/blue"
            android:id="@+id/txtDareU"
            android:layout_marginBottom="50dp"/>

        <com.dare_u.objects.ButtonU
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogIn"
            android:text="@string/welcome_log_in"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"/>

        <com.dare_u.objects.ButtonU
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:text="@string/welcome_sign_up"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</RelativeLayout>