<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dare_u.dare_u.NewChallengeActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/newChallengeBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:id="@+id/txtTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_challenge_to"/>

            <Spinner
                android:id="@+id/spContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_grey"/>

            <TextView
                android:id="@+id/txtChallenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_challenge_challenge"
                android:layout_marginTop="@dimen/new_challenge_margin_top"/>

            <com.dare_u.objects.EditTextU
                android:id="@+id/etChallenge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="120"/>

            <com.dare_u.objects.ButtonU
                android:id="@+id/btnSend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_challenge_send"
                android:layout_marginTop="@dimen/new_challenge_margin_top"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
