<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dare_u.dare_u.LogInActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/logInBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/log_in_username"
                android:id="@+id/txtUsername" />

            <com.dare_u.objects.EditTextU
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUsername"
                android:inputType="text"
                android:maxLength="22"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="10dp"
                android:text="@string/log_in_password"
                android:id="@+id/txtPassword" />

            <com.dare_u.objects.EditTextU
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:maxLength="22"
                android:maxLines="1"/>

            <com.dare_u.objects.ButtonU
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogIn"
                android:layout_marginTop="20dp"
                android:text="@string/log_in_button"
                android:textSize="@dimen/button_text_size"
                android:textAlignment="center"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
